CSS and HTML updates

--- a/index.html
+++ b/index.html
@@ -51,16 +51,13 @@
 
         <div class="hero-right">
           <div class="photo-card">
-            <img id="heroImage" src="images/vancouver-hero.jpg" alt="Vancouver scenic view" />
+            <img id="heroImage" src="./images/van10.webp" alt="Vancouver scenic view" />
             <div class="photo-caption">
               <span class="tag">Vancouver</span>
               <span class="tag">Canada</span>
               <span class="tag">Curiosities</span>
             </div>
           </div>
-          <p class="hint">
-            Put your images in <code>images/</code> (examples below).
-          </p>
         </div>
       </section>
 
@@ -79,7 +76,7 @@
 
         <div class="q-body">
           <div class="q-image">
-            <img id="questionImage" src="images/vancouver-1.jpg" alt="Vancouver related image" />
+            <img id="questionImage" src="./images/van2.webp" alt="Vancouver related image" />
           </div>
 
           <div class="q-content">
@@ -118,7 +115,7 @@
 
         <div class="results-grid">
           <div class="results-image">
-            <img id="resultsImage" src="images/vancouver-result.jpg" alt="Vancouver result image" />
+            <img id="resultsImage" src="images/van5.webp" alt="Vancouver result image" />
           </div>
 
           <div class="results-details">
@@ -144,7 +141,7 @@
 
       <footer class="footer">
         <p class="muted">
-          Tip: add your own Vancouver photos in <code>images/</code> to make it even prettier ✨
+          Created by Isabella, Javier & Voitch - The best students at Tamwood Vancouver!
         </p>
       </footer>
     </main>
