edit correct answers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="logo">VAN</span>
         <div class="brand-text">
           <h1>Vancouver Curiosities Quiz</h1>
-          <p>20 questions • 20 points each • Show what you know 🌲🏔️🌊</p>
+          <p>30 questions • 1 point each • Show what you know 🌲🏔️🌊</p>
         </div>
       </div>
 
@@ -44,7 +44,7 @@
               <div class="progress-fill" id="progressFill" style="width: 0%"></div>
             </div>
             <div class="progress-text">
-              <span id="progressText">Question 0 of 10</span>
+              <span id="progressText">Question 0 of 30</span>
             </div>
           </div>
         </div>
@@ -121,9 +121,9 @@
           <div class="results-details">
             <h3>Ranking Rules</h3>
             <ul>
-              <li><strong>0–5 correct</strong> → Beginner</li>
-              <li><strong>6–8 correct</strong> → Intermediate</li>
-              <li><strong>9–10 correct</strong> → Knows everything</li>
+              <li><strong>0–10 correct</strong> → Beginner</li>
+              <li><strong>10–20 correct</strong> → Intermediate</li>
+              <li><strong>20–30 correct</strong> → Knows everything</li>
             </ul>
 
             <div class="hero-actions">
@@ -141,7 +141,7 @@
 
       <footer class="footer">
         <p class="muted">
-          Created by Isabella, Javier & Voitch - The best students at Tamwood Vancouver!
+          Created by Isabella, Javier & Vojta - The best students at Tamwood Vancouver!
         </p>
       </footer>
     </main>
