fix minor errors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="logo">VAN</span>
         <div class="brand-text">
           <h1>Vancouver Curiosities Quiz</h1>
-          <p>30 questions • 1 point each • Show what you know 🌲🏔️🌊</p>
+          <p>30 questions • 10 points each • Show what you know 🌲🏔️🌊</p>
         </div>
       </div>
 
